refactor(backend): simplify learning goal to a track and a target date
The learning goal is a learning track plus one target date.

- learning_goal has no checkpoint_date; app_user has no experience
  profile or experience start date (V2 and database/schema.sql, pre-release)
- API: LearningGoalView, PUT /learning-goal and the onboarding request drop
  checkpointDate; the onboarding request and MeResponse drop
  experienceProfile and experienceStartDate (unknown properties are 400
  MALFORMED_REQUEST)
- target date validation stays: from tomorrow (plan-day) up to 3 years
- study budget horizon is always targetCompletionDate
- plan template placement uses one window [today, targetCompletionDate],
  milestones in template order (PREPARATION first, CONSOLIDATION last);
  placement vectors V1-V7 recomputed, CV-61 smoke cases use target dates only
- requirement.extract v1 prompt describes roadmap and technology lists
- OpenAPI snapshot regenerated

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>